--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,16 +1,17 @@
 server:
-  port: 8081
+  port: 18888
 spring:
   datasource:
     username: root
     password: 111111
     url: jdbc:mysql://localhost:3306/managestage?useUnicode=true&useSSL=false&characterEncoding=utf8&serverTimezone=UTC
     driver-class-name: com.mysql.cj.jdbc.Driver
-      #security:
-      # user:
-      #  name: user
-    # password: 111111
-d
+
+#  security:
+#    user:
+#      name: user
+#      password: 111111
+
 #允许循环依赖
 spring.main.allow-circular-references: true
 
@@ -21,9 +22,8 @@ mybatis-plus:
 spring.redis.host: localhost
 spring.redis.port: 6379
 
-
 wpca:
   jwt:
     header: Authorization
     expire: 604800 #7天
-    secret: xrjert123jkhi80134ghjk3ghjkfk543
+    secret: xrjert123jkhi80134ghjk3ghjkfk543  # 密钥
